--- a/solutions/svg/core/package.json
+++ b/solutions/svg/core/package.json
@@ -7,7 +7,7 @@
 	"license": "ISC",
 	"scripts": {
 		"build": "build_ts",
-		"ga_or": "npm run build && node ./target/ga/one-rect/start.js",
+		"ga_rects": "npm run build && node ./target/ga/rects/start.js",
 		"test": "jest"
 	},
 	"devDependencies": {
@@ -33,6 +33,7 @@
 		"@azaathoth/list": "^1.0.0",
 		"@babel/preset-env": "^7.18.2",
 		"@babel/preset-typescript": "^7.17.12",
-		"@types/jest": "^28.1.3"
+		"@types/jest": "^28.1.3",
+		"jpeg-js": "^0.4.4"
 	}
 }
